Add payout table

--- a/apuestas.ipynb
+++ b/apuestas.ipynb
@@ -2950,6 +2950,86 @@
     "fig.patch.set_facecolor('white')\n",
     "ax.set_xticklabels(payouts['match']);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f907b37a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Qatar-Ecuador: 1.25 (301060) 1.25 (fivethirtyeight)\n",
+      "England-Iran: -2.00 (301060) -2.00 (fivethirtyeight)\n",
+      "Senegal-Netherlands: 0.66 (301060) -2.00 (fivethirtyeight)\n",
+      "United States-Wales: -1.00 (301060) -1.00 (fivethirtyeight)\n",
+      "Argentina-Saudi Arabia: 21.00 (301060) 21.00 (fivethirtyeight)\n",
+      "Denmark-Tunisia: 2.00 (301060) 2.00 (fivethirtyeight)\n",
+      "Mexico-Poland: -1.00 (301060) -1.00 (fivethirtyeight)\n",
+      "France-Australia: 1.45 (301060) 1.45 (fivethirtyeight)\n",
+      "Morocco-Croatia: -1.00 (301060) -1.00 (fivethirtyeight)\n",
+      "Germany-Japan: 5.00 (301060) 5.00 (fivethirtyeight)\n",
+      "Spain-Costa Rica: 0.14 (301060) -2.00 (fivethirtyeight)\n",
+      "Belgium-Canada: 0.60 (301060) -2.00 (fivethirtyeight)\n",
+      "Switzerland-Cameroon: 0.75 (301060) -2.00 (fivethirtyeight)\n",
+      "Uruguay-Korea Republic: -2.00 (301060) 1.40 (fivethirtyeight)\n",
+      "Portugal-Ghana: 0.75 (301060) 0.75 (fivethirtyeight)\n",
+      "Brazil-Serbia: 0.44 (301060) 0.44 (fivethirtyeight)\n",
+      "Wales-Iran: 2.80 (301060) 1.80 (fivethirtyeight)\n",
+      "Qatar-Senegal: 0.70 (301060) -2.00 (fivethirtyeight)\n",
+      "Netherlands-Ecuador: -1.00 (301060) 1.30 (fivethirtyeight)\n",
+      "England-United States: -1.00 (301060) 2.20 (fivethirtyeight)\n",
+      "Tunisia-Australia: 2.60 (301060) 1.60 (fivethirtyeight)\n",
+      "Poland-Saudi Arabia: -2.00 (301060) -2.00 (fivethirtyeight)\n",
+      "France-Denmark: -0.20 (301060) -2.00 (fivethirtyeight)\n",
+      "Argentina-Mexico: 0.60 (301060) -2.00 (fivethirtyeight)\n",
+      "Japan-Costa Rica: 5.50 (301060) 5.50 (fivethirtyeight)\n",
+      "Belgium-Morocco: 2.20 (301060) 2.20 (fivethirtyeight)\n",
+      "Croatia-Canada: 1.25 (301060) -2.00 (fivethirtyeight)\n",
+      "Spain-Germany: -1.00 (301060) -1.00 (fivethirtyeight)\n",
+      "Cameroon-Serbia: -1.00 (301060) 1.80 (fivethirtyeight)\n",
+      "Korea Republic-Ghana: -1.00 (301060) -2.00 (fivethirtyeight)\n",
+      "Brazil-Switzerland: 0.50 (301060) -1.00 (fivethirtyeight)\n",
+      "Portugal-Uruguay: -1.00 (301060) -2.00 (fivethirtyeight)\n",
+      "Ecuador-Senegal: 2.25 (301060) 1.25 (fivethirtyeight)\n",
+      "Netherlands-Qatar: 0.18 (301060) -2.00 (fivethirtyeight)\n",
+      "Iran-United States: -2.00 (301060) -2.00 (fivethirtyeight)\n",
+      "Wales-England: 0.40 (301060) -2.00 (fivethirtyeight)\n",
+      "Australia-Denmark: 5.00 (301060) 5.00 (fivethirtyeight)\n",
+      "Tunisia-France: -1.00 (301060) -1.00 (fivethirtyeight)\n",
+      "Saudi Arabia-Mexico: -2.00 (301060) -2.00 (fivethirtyeight)\n",
+      "Poland-Argentina: -0.60 (301060) -2.00 (fivethirtyeight)\n",
+      "Canada-Morocco: 0.83 (301060) -2.00 (fivethirtyeight)\n",
+      "Croatia-Belgium: -1.00 (301060) -1.00 (fivethirtyeight)\n",
+      "Costa Rica-Germany: -2.00 (301060) -2.00 (fivethirtyeight)\n",
+      "Japan-Spain: 5.00 (301060) 5.00 (fivethirtyeight)\n",
+      "Korea Republic-Portugal: -1.00 (301060) -1.00 (fivethirtyeight)\n",
+      "Ghana-Uruguay: 0.75 (301060) -0.25 (fivethirtyeight)\n",
+      "Cameroon-Brazil: -1.00 (301060) -1.00 (fivethirtyeight)\n",
+      "Serbia-Switzerland: 1.80 (301060) 0.80 (fivethirtyeight)\n",
+      "Netherlands-United States: 0.90 (301060) 0.90 (fivethirtyeight)\n",
+      "Argentina-Australia: -1.00 (301060) 0.28 (fivethirtyeight)\n",
+      "France-Poland: -0.64 (301060) 0.36 (fivethirtyeight)\n",
+      "England-Senegal: 0.60 (301060) -1.00 (fivethirtyeight)\n",
+      "Japan-Croatia: -1.00 (301060) -1.00 (fivethirtyeight)\n",
+      "Brazil-Korea Republic: 0.20 (301060) -1.00 (fivethirtyeight)\n",
+      "Morocco-Spain: 4.00 (301060) -1.00 (fivethirtyeight)\n",
+      "Portugal-Switzerland: 0.91 (301060) -1.00 (fivethirtyeight)\n",
+      "Croatia-Brazil: 7.50 (301060) 7.50 (fivethirtyeight)\n",
+      "Netherlands-Argentina: 0.20 (301060) -1.00 (fivethirtyeight)\n",
+      "Morocco-Portugal: 4.50 (301060) 5.50 (fivethirtyeight)\n",
+      "England-France: 0.70 (301060) -1.00 (fivethirtyeight)\n",
+      "Argentina-Croatia: 0.95 (301060) -1.00 (fivethirtyeight)\n",
+      "France-Morocco: -2.00 (301060) -1.00 (fivethirtyeight)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in payouts[['match', '301060_payout', '538_payout']].to_dict('records'):\n",
+    "    print(f\"{row['match']}: {row['301060_payout']:.2f} (301060) {row['538_payout']:.2f} (fivethirtyeight)\")"
+   ]
   }
  ],
  "metadata": {
