--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -12220,7 +12220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "89d79b6a",
    "metadata": {},
    "outputs": [
@@ -12483,7 +12483,7 @@
        "335             Kai Havertz  ger   1.4  102    2   0     1.235294"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12495,7 +12495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "dca90d62",
    "metadata": {
     "scrolled": false
@@ -13658,7 +13658,7 @@
        "308          Jordan Henderson  eng   0.1  271    1   0     10.000000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13669,6 +13669,109 @@
     "gls_per_npxG = gls_per_npxG[gls_per_npxG['Gls'] - gls_per_npxG['PK'] >= 1]\n",
     "print(gls_per_npxG.shape[0])\n",
     "gls_per_npxG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fb4e8348",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Player</th>\n",
+       "      <th>team</th>\n",
+       "      <th>npxG</th>\n",
+       "      <th>Min</th>\n",
+       "      <th>Gls</th>\n",
+       "      <th>PK</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>358</th>\n",
+       "      <td>Kieffer Moore</td>\n",
+       "      <td>wal</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>225</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>Andreas Cornelius</td>\n",
+       "      <td>den</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>92</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>533</th>\n",
+       "      <td>Raphinha</td>\n",
+       "      <td>bra</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>315</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>378</th>\n",
+       "      <td>Lautaro Martínez</td>\n",
+       "      <td>arg</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>241</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>280</th>\n",
+       "      <td>Jamal Musiala</td>\n",
+       "      <td>ger</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>258</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Player team  npxG  Min  Gls  PK\n",
+       "358      Kieffer Moore  wal   1.0  225    0   0\n",
+       "50   Andreas Cornelius  den   1.0   92    0   0\n",
+       "533           Raphinha  bra   1.2  315    0   0\n",
+       "378   Lautaro Martínez  arg   1.9  241    0   0\n",
+       "280      Jamal Musiala  ger   1.9  258    0   0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sums[sums['Gls'] == sums['PK']].sort_values(by='npxG').tail()[['Player', 'team', 'npxG', 'Min', 'Gls', 'PK']]"
    ]
   }
  ],
