Add Kelly Criterion

--- a/apuestas.ipynb
+++ b/apuestas.ipynb
@@ -2953,7 +2953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "f907b37a",
    "metadata": {},
    "outputs": [
@@ -3029,6 +3029,125 @@
    "source": [
     "for row in payouts[['match', '301060_payout', '538_payout']].to_dict('records'):\n",
     "    print(f\"{row['match']}: {row['301060_payout']:.2f} (301060) {row['538_payout']:.2f} (fivethirtyeight)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "b26b7c47",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "236.5381491820566\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Home            Away          \n",
+       "Qatar           Ecuador             1.485000\n",
+       "England         Iran                1.470150\n",
+       "Senegal         Netherlands         1.561887\n",
+       "United States   Wales               1.398697\n",
+       "Argentina       Saudi Arabia        1.557216\n",
+       "Denmark         Tunisia             1.557216\n",
+       "Mexico          Poland              1.449627\n",
+       "France          Australia           2.628173\n",
+       "Morocco         Croatia             2.122250\n",
+       "Germany         Japan               3.500297\n",
+       "Spain           Costa Rica          3.500297\n",
+       "Belgium         Canada              4.144352\n",
+       "Switzerland     Cameroon            4.496622\n",
+       "Uruguay         Korea Republic      4.406689\n",
+       "Portugal        Ghana               5.706663\n",
+       "Brazil          Serbia              6.327548\n",
+       "Wales           Iran               11.301000\n",
+       "Qatar           Senegal            11.719137\n",
+       "Netherlands     Ecuador             9.947479\n",
+       "England         United States       9.776951\n",
+       "Tunisia         Australia          13.022899\n",
+       "Poland          Saudi Arabia       12.869688\n",
+       "France          Denmark            12.869688\n",
+       "Argentina       Mexico             14.002221\n",
+       "Japan           Costa Rica         16.637834\n",
+       "Belgium         Morocco            23.193140\n",
+       "Croatia         Canada             34.441814\n",
+       "Spain           Germany            22.961209\n",
+       "Cameroon        Serbia             22.862804\n",
+       "Korea Republic  Ghana              18.682177\n",
+       "Brazil          Switzerland        21.297682\n",
+       "Portugal        Uruguay            20.263223\n",
+       "Ecuador         Senegal            21.073752\n",
+       "Netherlands     Qatar              21.882984\n",
+       "Iran            United States      18.956135\n",
+       "Wales           England            19.903941\n",
+       "Australia       Denmark            28.512396\n",
+       "Tunisia         France             21.823668\n",
+       "Saudi Arabia    Mexico             20.405130\n",
+       "Poland          Argentina          20.350716\n",
+       "Canada          Morocco            24.579595\n",
+       "Croatia         Belgium            22.110871\n",
+       "Costa Rica      Germany            18.542176\n",
+       "Japan           Spain              19.469285\n",
+       "Korea Republic  Portugal           11.389532\n",
+       "Ghana           Uruguay            12.756276\n",
+       "Cameroon        Brazil              7.197632\n",
+       "Serbia          Switzerland         8.262881\n",
+       "Netherlands     United States      10.247710\n",
+       "Argentina       Australia           9.707399\n",
+       "France          Poland              9.711525\n",
+       "England         Senegal            11.630875\n",
+       "Japan           Croatia            11.353396\n",
+       "Brazil          Korea Republic     11.718597\n",
+       "Morocco         Spain              29.179306\n",
+       "Portugal        Switzerland        41.321545\n",
+       "Croatia         Brazil             75.205212\n",
+       "Netherlands     Argentina          86.543844\n",
+       "Morocco         Portugal          250.328070\n",
+       "England         France            284.301165\n",
+       "Argentina       Croatia           342.132760\n",
+       "France          Morocco           236.538149\n",
+       "Name: balance_after, dtype: float64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def kelly(p, odds):\n",
+    "    b = odds - 1\n",
+    "    return (p - (1 - p) / b)\n",
+    "\n",
+    "def kelly_row(row):\n",
+    "    return {\n",
+    "        'a': max(0, kelly(row['301060_proba'], row['bet365_paya'])),\n",
+    "        'b': max(0, kelly(row['301060_probb'], row['bet365_payb'])),\n",
+    "        'x': max(0, kelly(row['301060_probx'], row['bet365_payx'])),\n",
+    "    }\n",
+    "\n",
+    "bal = 1\n",
+    "for i in df.index:\n",
+    "    row = df.loc[i]\n",
+    "    kellys = kelly_row(row)\n",
+    "    a_bet = bal * kellys['a']\n",
+    "    b_bet = bal * kellys['b']\n",
+    "    x_bet = bal * kellys['x']\n",
+    "    bal -= a_bet + b_bet + x_bet\n",
+    "    if row['winner'] == 'a':\n",
+    "        bal += a_bet * row['bet365_paya']\n",
+    "    if row['winner'] == 'b':\n",
+    "        bal += b_bet * row['bet365_payb']\n",
+    "    if row['winner'] == 'x':\n",
+    "        bal += x_bet * row['bet365_payx']\n",
+    "    df.loc[i, 'balance_after'] = bal\n",
+    "print(bal)\n",
+    "pd.set_option('display.max_rows', df.shape[0]+1)\n",
+    "df['balance_after']"
    ]
   }
  ],
